manifest/objects/Carrier_Price__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Carrier Prices</relationshipLabel>
        <relationshipName>Carrier_Prices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Admin_Fee__c</fullName>
        <label>Admin Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>At_Risk_PPPM__c</fullName>
        <label>At Risk Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Carrier__c</fullName>
        <label>Carrier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Carrier</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Consult_Type__c</fullName>
        <label>Consult Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Consult_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Copado_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Copado External Id</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initial_Utilization_Cap__c</fullName>
        <description>This is the utilization % at the point of sale based upon the appropriate pricing sheet and number of lives. This will be the utilization rate for any proposals and/or contracts that are produced in Octiv.</description>
        <inlineHelpText>The Utilization Cap % for consults included products.</inlineHelpText>
        <label>Initial Utilization Cap</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Is_Custom__c</fullName>
        <formula>Account__c != NULL</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Custom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Line_of_Business__c</fullName>
        <description>Determines the contracted price for the Carrier based on the line of business (ASO, FI, etc.)</description>
        <inlineHelpText>Health Plan&apos;s Line of Business (ASO, etc) which determines contracted price.</inlineHelpText>
        <label>Line of Business</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Line_of_Business</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opt_In__c</fullName>
        <description>Determines pricing if employers are opt-in or opt-out</description>
        <inlineHelpText>Determines pricing if employers are opt-in or opt-out</inlineHelpText>
        <label>Opt-In</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent_Product_Code__c</fullName>
        <formula>IF(ISBLANK(Parent_Product__c), &apos;NULL&apos;,Parent_Product__r.ProductCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Carrier Prices (Parent Product)</relationshipLabel>
        <relationshipName>Carrier_Prices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price per Life</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <formula>Product__r.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Product_Prices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Book_of_Business_End__c</fullName>
        <label>Total Book of Business End</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Book_of_Business_Start__c</fullName>
        <label>Total Book of Business Start</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Up_Front_Fee__c</fullName>
        <label>Up Front Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Carrier Price</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Product_Code__c</columns>
        <columns>Parent_Product_Code__c</columns>
        <columns>Consult_Type__c</columns>
        <columns>Carrier__c</columns>
        <columns>Line_of_Business__c</columns>
        <columns>Total_Book_of_Business_Start__c</columns>
        <columns>Total_Book_of_Business_End__c</columns>
        <columns>Price__c</columns>
        <columns>Initial_Utilization_Cap__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Expiration_Date__c</columns>
        <columns>Admin_Fee__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AmeriHealth</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Product_Code__c</columns>
        <columns>Parent_Product_Code__c</columns>
        <columns>Consult_Type__c</columns>
        <columns>Carrier__c</columns>
        <columns>Line_of_Business__c</columns>
        <columns>Total_Book_of_Business_Start__c</columns>
        <columns>Total_Book_of_Business_End__c</columns>
        <columns>Price__c</columns>
        <columns>Initial_Utilization_Cap__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Expiration_Date__c</columns>
        <columns>Admin_Fee__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Carrier__c</field>
            <operation>equals</operation>
            <value>AmeriHealth</value>
        </filters>
        <label>AmeriHealth</label>
    </listViews>
    <listViews>
        <fullName>BCBNS_TN</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Product_Code__c</columns>
        <columns>Parent_Product_Code__c</columns>
        <columns>Consult_Type__c</columns>
        <columns>Carrier__c</columns>
        <columns>Line_of_Business__c</columns>
        <columns>Total_Book_of_Business_Start__c</columns>
        <columns>Total_Book_of_Business_End__c</columns>
        <columns>Price__c</columns>
        <columns>Initial_Utilization_Cap__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Expiration_Date__c</columns>
        <columns>Admin_Fee__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Carrier__c</field>
            <operation>equals</operation>
            <value>BCBS TN</value>
        </filters>
        <label>BCBNS TN</label>
    </listViews>
    <listViews>
        <fullName>BCBS_California</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Product_Code__c</columns>
        <columns>Parent_Product_Code__c</columns>
        <columns>Consult_Type__c</columns>
        <columns>Carrier__c</columns>
        <columns>Line_of_Business__c</columns>
        <columns>Total_Book_of_Business_Start__c</columns>
        <columns>Total_Book_of_Business_End__c</columns>
        <columns>Price__c</columns>
        <columns>Initial_Utilization_Cap__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Expiration_Date__c</columns>
        <columns>Admin_Fee__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Carrier__c</field>
            <operation>equals</operation>
            <value>Blue Shield of California</value>
        </filters>
        <label>BCBS California</label>
    </listViews>
    <listViews>
        <fullName>BCBS_Michigan</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Product_Code__c</columns>
        <columns>Parent_Product_Code__c</columns>
        <columns>Consult_Type__c</columns>
        <columns>Carrier__c</columns>
        <columns>Line_of_Business__c</columns>
        <columns>Total_Book_of_Business_Start__c</columns>
        <columns>Total_Book_of_Business_End__c</columns>
        <columns>Price__c</columns>
        <columns>Initial_Utilization_Cap__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Expiration_Date__c</columns>
        <columns>Admin_Fee__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Carrier__c</field>
            <operation>equals</operation>
            <value>BCBS Michigan</value>
        </filters>
        <label>BCBS Michigan</label>
    </listViews>
    <listViews>
        <fullName>Carrier_Aetna</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Consult_Type__c</columns>
        <columns>Carrier__c</columns>
        <columns>Parent_Product_Code__c</columns>
        <columns>Line_of_Business__c</columns>
        <columns>Total_Book_of_Business_Start__c</columns>
        <columns>Total_Book_of_Business_End__c</columns>
        <columns>Price__c</columns>
        <columns>Initial_Utilization_Cap__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Expiration_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Carrier__c</field>
            <operation>equals</operation>
            <value>Aetna</value>
        </filters>
        <label>Carrier - Aetna</label>
    </listViews>
    <listViews>
        <fullName>Carrier_Aultcare</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Consult_Type__c</columns>
        <columns>Carrier__c</columns>
        <columns>Line_of_Business__c</columns>
        <columns>Total_Book_of_Business_Start__c</columns>
        <columns>Total_Book_of_Business_End__c</columns>
        <columns>Price__c</columns>
        <columns>Initial_Utilization_Cap__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Expiration_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Carrier__c</field>
            <operation>equals</operation>
            <value>Aultcare</value>
        </filters>
        <label>Carrier - Aultcare</label>
    </listViews>
    <listViews>
        <fullName>Carrier_BCBS_FL</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Consult_Type__c</columns>
        <columns>Carrier__c</columns>
        <columns>Line_of_Business__c</columns>
        <columns>Total_Book_of_Business_Start__c</columns>
        <columns>Total_Book_of_Business_End__c</columns>
        <columns>Price__c</columns>
        <columns>Initial_Utilization_Cap__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Expiration_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Carrier__c</field>
            <operation>equals</operation>
            <value>BCBS AL</value>
        </filters>
        <label>Carrier - BCBS FL</label>
    </listViews>
    <listViews>
        <fullName>Carrier_BCBS_NC</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Consult_Type__c</columns>
        <columns>Carrier__c</columns>
        <columns>Line_of_Business__c</columns>
        <columns>Total_Book_of_Business_Start__c</columns>
        <columns>Total_Book_of_Business_End__c</columns>
        <columns>Price__c</columns>
        <columns>Initial_Utilization_Cap__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Expiration_Date__c</columns>
        <columns>Parent_Product__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Carrier__c</field>
            <operation>equals</operation>
            <value>BCBS NC</value>
        </filters>
        <label>Carrier - BCBS NC</label>
    </listViews>
    <listViews>
        <fullName>Carrier_BCBS_RI</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Consult_Type__c</columns>
        <columns>Carrier__c</columns>
        <columns>Line_of_Business__c</columns>
        <columns>Total_Book_of_Business_Start__c</columns>
        <columns>Total_Book_of_Business_End__c</columns>
        <columns>Initial_Utilization_Cap__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Expiration_Date__c</columns>
        <columns>Parent_Product__c</columns>
        <columns>Price__c</columns>
        <columns>Admin_Fee__c</columns>
        <columns>At_Risk_PPPM__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Carrier__c</field>
            <operation>equals</operation>
            <value>BCBS RI</value>
        </filters>
        <label>Carrier - BCBS RI</label>
    </listViews>
    <listViews>
        <fullName>Carrier_BCBS_SC</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Consult_Type__c</columns>
        <columns>Carrier__c</columns>
        <columns>Line_of_Business__c</columns>
        <columns>Total_Book_of_Business_Start__c</columns>
        <columns>Total_Book_of_Business_End__c</columns>
        <columns>Price__c</columns>
        <columns>Initial_Utilization_Cap__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Expiration_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Carrier__c</field>
            <operation>equals</operation>
            <value>BCBS SC</value>
        </filters>
        <label>Carrier - BCBS SC</label>
    </listViews>
    <listViews>
        <fullName>Carrier_BSC</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Consult_Type__c</columns>
        <columns>Carrier__c</columns>
        <columns>Line_of_Business__c</columns>
        <columns>Total_Book_of_Business_Start__c</columns>
        <columns>Total_Book_of_Business_End__c</columns>
        <columns>Price__c</columns>
        <columns>Initial_Utilization_Cap__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Expiration_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Carrier__c</field>
            <operation>equals</operation>
            <value>BSC</value>
        </filters>
        <label>Carrier - BSC</label>
    </listViews>
    <listViews>
        <fullName>Carrier_Fallon</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Consult_Type__c</columns>
        <columns>Carrier__c</columns>
        <columns>Line_of_Business__c</columns>
        <columns>Total_Book_of_Business_Start__c</columns>
        <columns>Total_Book_of_Business_End__c</columns>
        <columns>Price__c</columns>
        <columns>Initial_Utilization_Cap__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Expiration_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Carrier__c</field>
            <operation>equals</operation>
            <value>Fallon Healthcare</value>
        </filters>
        <label>Carrier - Fallon</label>
    </listViews>
    <listViews>
        <fullName>Carrier_Highmark</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Consult_Type__c</columns>
        <columns>Carrier__c</columns>
        <columns>Line_of_Business__c</columns>
        <columns>Total_Book_of_Business_Start__c</columns>
        <columns>Total_Book_of_Business_End__c</columns>
        <columns>Price__c</columns>
        <columns>Initial_Utilization_Cap__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Expiration_Date__c</columns>
        <columns>Parent_Product_Code__c</columns>
        <columns>Admin_Fee__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Carrier__c</field>
            <operation>equals</operation>
            <value>Highmark</value>
        </filters>
        <label>Carrier - Highmark</label>
    </listViews>
    <listViews>
        <fullName>Carrier_Horizon_BCBS</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Consult_Type__c</columns>
        <columns>Carrier__c</columns>
        <columns>Line_of_Business__c</columns>
        <columns>Total_Book_of_Business_Start__c</columns>
        <columns>Total_Book_of_Business_End__c</columns>
        <columns>Initial_Utilization_Cap__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Expiration_Date__c</columns>
        <columns>Parent_Product__c</columns>
        <columns>Price__c</columns>
        <columns>Admin_Fee__c</columns>
        <columns>At_Risk_PPPM__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Carrier__c</field>
            <operation>equals</operation>
            <value>Horizon BCBS</value>
        </filters>
        <label>Carrier - Horizon BCBS</label>
    </listViews>
    <nameField>
        <label>Carrier Price</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Carrier Prices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>